# math_eval

./: CMakeLists.txt  CMakeLists.txt.in  Readme.md
demo/: CMakeLists.txt  main.cc
libmath_eval/: CMakeLists.txt
libmath_eval/include/: math_eval.h
libmath_eval/src/: math_eval.cc
libmath_eval/test/: CMakeLists.txt  bad_input.cc  correct_expression.cc
src/: CMakeLists.txt
